review and refine first chapter
- add grammarly
- work on flow

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,8 @@
 			"extensions": [
 				"dbaeumer.vscode-eslint",
 				"yzhang.markdown-all-in-one",
-				"DavidAnson.vscode-markdownlint"
+				"DavidAnson.vscode-markdownlint",
+				"znck.grammarly"
 			]
 		}
 	}
