Add pdf and live share extensions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,9 @@
 				"yzhang.markdown-all-in-one",
 				"DavidAnson.vscode-markdownlint",
 				"znck.grammarly",
-				"astro-build.astro-vscode"
+				"astro-build.astro-vscode",
+				"ms-vsliveshare.vsliveshare",
+				"tomoki1207.pdf"
 			]
 		}
 	}
