--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/starlight": "^0.6.1",
     "astro": "^2.9.3",
+    "astro-embed": "^0.5.0",
     "sharp": "^0.32.3"
   }
 }
