start sequence and data by moving concepts and writing overview

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+  "grammarly.config.documentDomain": "academic",
+  "grammarly.config.documentDialect": "australian",
   "grammarly.files.include": [
     "**/*.md"
   ]
