--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
   "grammarly.config.documentDomain": "academic",
   "grammarly.config.documentDialect": "australian",
-  "grammarly.files.include": [
-    "**/*.md"
-  ]
+  "grammarly.files.include": ["**/*.md"],
+  "files.associations": {
+    "*.mdx": "markdown"
+  }
 }
