--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/starlight": "^0.7.2",
+    "@astrojs/react": "^2.3.2",
+    "@astrojs/starlight": "^0.8.0",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "astro": "^2.9.3",
     "astro-embed": "^0.5.0",
-    "sharp": "^0.32.3"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sharp": "^0.32.3",
+    "swiper": "^10.2.0"
   }
 }
