progress grammar chapter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
   "grammarly.config.documentDomain": "academic",
   "grammarly.config.documentDialect": "australian",
-  "grammarly.files.include": ["**/*.md"],
+  "grammarly.files.include": [
+    "**/*.md",
+    "**/*.mdx"
+  ],
   "files.associations": {
     "*.mdx": "markdown"
   }
