--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,18 +3,19 @@
 {
 	"name": "Node.js",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/javascript-node:0-20",
+	// "image": "mcr.microsoft.com/devcontainers/javascript-node:0-20",
+	"dockerFile":  "Dockerfile",
 	"customizations": {
 		"vscode": {
 			"extensions": [
 				"dbaeumer.vscode-eslint",
 				"yzhang.markdown-all-in-one",
 				"DavidAnson.vscode-markdownlint",
-				"znck.grammarly",
 				"astro-build.astro-vscode",
 				"ms-vsliveshare.vsliveshare",
 				"tomoki1207.pdf",
-				"eamodio.gitlens"
+				"eamodio.gitlens",
+				"valentjn.vscode-ltex"
 			]
 		}
 	}
