--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.2.7",
     "astro": "^4.3.5",
     "astro-embed": "^0.6.1",
+    "astro-icon": "^0.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "squoosh": "^0.0.0",
