--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.9",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "astro dev --host",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
