--- a/public/resources/msys2-settings.json
+++ b/public/resources/msys2-settings.json
@@ -46,6 +46,7 @@
     ],
     "C_Cpp.default.compilerPath": "C:/msys64/mingw64/bin/gcc.exe",
     "C_Cpp.default.intelliSenseMode": "gcc-x64",
+    "chat.disableAIFeatures": true,
     "github.copilot.enable": {
         "*": false
     },
