--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "sharp": "^0.34.1",
     "starlight-auto-sidebar": "^0.1",
+    "starlight-image-zoom": "^0.13.2",
     "starlight-links-validator": "^0.14.3",
     "swiper": "^11.1"
   },
